// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`how city items render CityItem correctly renders after relaunch 1`] = `
<li
  className="locations__item"
  onClick={[Function]}
>
  <a
    className="locations__item-link tabs__item "
    href="#"
  >
    <span>
      Moscow 20222
    </span>
  </a>
</li>
`;

exports[`how city items render CityItem correctly renders with active city 1`] = `
<li
  className="locations__item"
  onClick={[Function]}
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
  >
    <span>
      london
    </span>
  </a>
</li>
`;
